crates/apollo-compiler/test_data/diagnostics/0100_union_extensions.txt
Error: `ThisIsAScalar` field must return an object type
   ╭─[0100_union_extensions.graphql:8:30]
   │
 8 │ extend union NonObjectType = ThisIsAScalar
   │                              ──────┬──────  
   │                                    ╰──────── This is a a scalar
   │ 
   │ Help: Union members must be of base Object Type.
───╯
Error: the union member `WithFieldA` is defined multiple times in the document
    ╭─[0100_union_extensions.graphql:12:33]
    │
 11 │ union DuplicateMembers = WithFieldA
    │                          ─────┬────  
    │                               ╰────── previous definition of `WithFieldA` here
 12 │ extend union DuplicateMembers = WithFieldA | WithFieldB
    │                                 ─────┬────  
    │                                      ╰────── `WithFieldA` redefined here
    │ 
    │ Help: `WithFieldA` must only be defined once in this document.
────╯
Error: non-repeatable directive nonRepeatable can only be used once per location
    ╭─[0100_union_extensions.graphql:17:33]
    │
 16 │ union DuplicateDirective @nonRepeatable = WithFieldA
    │                          ───────┬──────  
    │                                 ╰──────── directive nonRepeatable first called here
 17 │ extend union DuplicateDirective @nonRepeatable = WithFieldB
    │                                 ───────┬──────  
    │                                        ╰──────── directive nonRepeatable called again here
────╯

